add .env.example
