# contestr/api/openapi.yaml
@@ -16,7 +16,6 @@ paths:
         200:
           $ref: '#/components/responses/RegattaContestStandings'
 
-  # TODO
   /cfcontest/{contest_id}:
     get:
       operationId: getContest
@@ -28,21 +27,7 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/GetContestResponse'
-  /hello:
-    get:
-      operationId: getHello
-      parameters:
-        - name: name
-          in: query
-          schema:
-            type: string
-      responses:
-        200:
-          description: hello handle
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Hello'
+
 components:
   responses:
     RegattaContestStandings:
@@ -146,16 +131,6 @@ components:
           type: string
         name:
           type: string
-    Hello:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
-        timestamp:
-          type: string
-          format: date-time
     Error:
       type: object
       required:
