# contestr/internal/handlers/hello.go
@@ -1,33 +1,0 @@
-package handlers
-
-import (
-	"contestr/internal/generated/server"
-	"contestr/pkg/logger"
-	"github.com/labstack/echo/v4"
-	"net/http"
-	"time"
-)
-
-type HelloHandle struct {
-}
-
-func NewHelloHandle() *HelloHandle {
-	return &HelloHandle{}
-}
-
-// GetHello реализует обработчик для ручки /hello
-func (s *HelloHandle) GetHello(ctx echo.Context, params server.GetHelloParams) error {
-	name := "World"
-	if params.Name != nil && *params.Name != "" {
-		name = *params.Name
-	}
-
-	timestamp := time.Now()
-	response := server.Hello{
-		Message:   "Hello, " + name + "!",
-		Timestamp: &timestamp,
-	}
-
-	logger.Info(ctx.Request().Context(), "hello request processed")
-	return ctx.JSON(http.StatusOK, response)
-}
